<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/frameMeetings">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    android:text="Now"
                    android:textAllCaps="true"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

            <androidx.cardview.widget.CardView
                    android:id="@+id/cv_current_meeting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    app:cardBackgroundColor="@android:color/white"
                    app:cardCornerRadius="6dp"
                    app:cardElevation="3dp">
                <TextView
                        android:id="@+id/free_room"
                        android:text="@string/free_room"
                        android:layout_width="366dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="15dp"
                        android:gravity="center|center_vertical"
                        android:layout_marginRight="15dp"
                        android:visibility="invisible"
                        style="@style/TextView"/>

                <LinearLayout
                        android:id="@+id/ll_current_meeting"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:visibility="invisible"
                        tools:visibility="visible">

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="10dp">

                        <TextView
                                android:id="@+id/tv_current_meeting_start_time"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@android:color/black"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                tools:text="17.00"/>

                        <TextView
                                android:id="@+id/tv_current_meeting_delimiter"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/delimiter"
                                android:textColor="@android:color/black"
                                android:textSize="16sp"
                                android:textStyle="bold"/>

                        <TextView
                                android:id="@+id/tv_current_meeting_end_time"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@android:color/black"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                tools:text="17.00"/>

                        <TextView
                                android:id="@+id/tv_current_meeting_confirmed"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="end"
                                android:textAllCaps="true"
                                android:textColor="@android:color/black"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                tools:text="confirmed"/>

                    </LinearLayout>

                    <TextView
                            android:id="@+id/tv_current_meeting_location"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="45dp"
                            android:textSize="16sp"
                            android:textStyle="normal"
                            tools:text="location"/>

                    <TextView
                            android:id="@+id/tv_current_meeting_members"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="45dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="10dp"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            tools:text="members"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="15dp">

                <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardBackgroundColor="@color/yellow"
                        app:cardCornerRadius="6dp"
                        app:cardElevation="3dp"
                        app:contentPadding="5dp">

                    <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tv_meetings_data"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:padding="10dp"
                                android:textColor="@color/colorAccent"
                                android:textSize="20sp"
                                android:visibility="visible"
                                tools:text="@string/text_no_meetings"
                                tools:visibility="visible"/>

                        <com.google.android.material.button.MaterialButton
                                android:id="@+id/btnConfirm"
                                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_margin="5dp"
                                android:padding="12dp"
                                android:text="@string/confirm"
                                android:textAllCaps="false"
                                android:textColor="@android:color/white"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                android:visibility="gone"
                                app:cornerRadius="6dp"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <TextView
                    android:id="@+id/cv_next"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    android:text="Next"
                    android:textAllCaps="true"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:visibility="invisible"/>

            <androidx.cardview.widget.CardView
                    android:id="@+id/cv_next_meeting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="15dp"
                    app:cardCornerRadius="6dp"
                    app:cardElevation="3dp"
                    android:visibility="invisible">

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_next_meeting_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="10dp"
                        android:text="@string/msg_no_meetings"
                        android:textColor="@color/colorAccent"
                        android:textSize="20sp"
                        android:visibility="invisible"
                        tools:visibility="visible"/>

                <LinearLayout
                        android:id="@+id/ll_next_meeting"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/white"
                        android:orientation="vertical"
                        android:visibility="invisible"
                        tools:visibility="visible">

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="10dp">

                        <TextView
                                android:id="@+id/tv_next_meeting_start_time"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@android:color/black"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                tools:text="17.00"/>

                        <TextView
                                android:id="@+id/tv_next_meeting_delimiter"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/delimiter"
                                android:textColor="@android:color/black"
                                android:textSize="16sp"
                                android:textStyle="bold"/>

                        <TextView
                                android:id="@+id/tv_next_meeting_end_time"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@android:color/black"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                tools:text="17.00"/>

                        <TextView
                                android:id="@+id/tv_next_meeting_confirmed"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="end"
                                android:textAllCaps="true"
                                android:textColor="@android:color/black"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                tools:text="confirmed"/>

                    </LinearLayout>

                    <TextView
                            android:id="@+id/tv_next_meeting_location"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="45dp"
                            android:textSize="16sp"
                            android:textStyle="normal"
                            tools:text="location"/>

                    <TextView
                            android:id="@+id/tv_next_meeting_members"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="45dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="10dp"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            tools:text="members"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


</FrameLayout>